# duckdb-kernel

./: .gitignore  CLAUDE.md  Makefile  README.md  RELEASE_TEST.md  SPECKIT-PERSPECTIVE.md  go.mod  go.sum  install.sh
.github/workflows/: ci.yml  release.yml
cmd/duckdb-kernel/: main.go
docs/: architecture.md  perspective-viewer-integration.md
docs/design/: 006-map-plugin-v2.md  007-spool-ttl-recovery.md
extensions/: package-lock.json  package.json
extensions/duckdb-explorer/: package.json  pyproject.toml
extensions/duckdb-explorer/src/: index.ts
extensions/jupyter/: package.json
extensions/jupyter/duckdb-explorer/: package.json
extensions/jupyter/perspective-viewer/: package.json  pyproject.toml  webpack.config.js
extensions/jupyter/perspective-viewer/hugr_perspective/: spool_proxy.py
extensions/jupyter/perspective-viewer/jupyter-config/: hugr_perspective.json
extensions/jupyter/perspective-viewer/src/: jsonTab.ts  perspectiveTab.ts  spoolUrl.ts  widget.ts
extensions/jupyterlab/: package.json  pyproject.toml  webpack.config.js
extensions/jupyterlab/hugr_perspective/: __init__.py  handlers.py
extensions/jupyterlab/hugr_perspective/labextension/: build_log.json  package.json
extensions/jupyterlab/hugr_perspective/labextension/static/: lib_index_js.85d6c0662cb87da2f4b6.js  lib_index_js.85d6c0662cb87da2f4b6.js.map  remoteEntry.90507284dc34dd4dffb6.js  remoteEntry.90507284dc34dd4dffb6.js.map  style.js  style_index_js.b4bce633c096b9d6ad29.js  style_index_js.b4bce633c096b9d6ad29.js.map
extensions/jupyterlab/hugr_perspective/labextension/static/perspective/: perspective-js.wasm  perspective-server.wasm  perspective-viewer-d3fc.js  perspective-viewer-datagrid.js  perspective-viewer.js  perspective-viewer.wasm  perspective.js  themes.css
extensions/jupyterlab/src/: index.ts  introspectClient.ts  jsonTab.ts  map-plugin.ts  perspectiveTab.ts  plugin.ts  sidebar.ts  spoolUrl.ts  widget.ts
extensions/jupyterlab/style/: index.css
extensions/perspective-core/: package-lock.json  package.json  tsconfig.json
extensions/perspective-core/src/: index.ts  json-view.ts  map-plugin.ts  perspective.ts  renderer.ts  streaming.ts  types.ts  utils.ts
extensions/perspective-core/style/: index.css
extensions/perspective-viewer/: package.json  webpack.config.js
extensions/perspective-viewer/hugr_perspective/: __init__.py
extensions/perspective-viewer/src/: jsonTab.ts  plugin.ts
extensions/perspective-viewer/style/: index.css
extensions/vscode/: .vscodeignore  README.md  build.mjs  package-lock.json  package.json  tsconfig.json
extensions/vscode/src/: detailPanel.ts  extension.ts  installKernel.ts  introspectClient.ts  map-plugin-standalone.ts  map-plugin.ts  perspective-panel-webview.ts  perspectivePanel.ts  renderer.ts  treeProvider.ts
internal/engine/: engine.go  introspect.go  introspect_test.go  result.go  result_integration_test.go  result_test.go
internal/kernel/: arrowhttp.go  handlers.go  history.go  kernel.go  message.go
internal/meta/: commands.go
internal/renderer/: table.go
internal/session/: manager.go  session.go
internal/spool/: spool.go
kernel/: kernel.json
pkg/flatten/: converter.go
pkg/geoarrow/: convert.go  convert_test.go  leak_test.go  projector.go  reader.go  replacer.go  types.go  wkb.go
tests/: integration_test.py  requirements.txt
(+5 files in other folders)
