[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "hugr-perspective-viewer"
version = "0.1.0"
description = "Perspective visualization viewer for DuckDB Kernel results"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["jupyter_server>=2.0.0"]

[project.entry-points."jupyter_server.serverextension"]
hugr_perspective = "hugr_perspective"

[tool.hatch.build.targets.wheel]
packages = ["hugr_perspective"]

[tool.hatch.build.targets.wheel.shared-data]
"hugr_perspective/labextension" = "share/jupyter/labextensions/@hugr-lab/perspective-viewer"
