[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2", "hatch-jupyter-builder>=0.5"]
build-backend = "hatchling.build"

[project]
name = "hugr-perspective-viewer"
version = "0.1.0"
description = "Perspective visualization viewer for DuckDB Kernel results"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["jupyter_server>=2.14.0", "pyarrow>=17.0.0"]

[project.entry-points."jupyter_server.serverextension"]
hugr_perspective = "hugr_perspective"

[tool.hatch.build]
artifacts = ["hugr_perspective/labextension"]

[tool.hatch.build.targets.wheel]
packages = ["hugr_perspective"]
ignore-vcs = true

[tool.hatch.build.targets.wheel.shared-data]
"hugr_perspective/labextension" = "share/jupyter/labextensions/@hugr-lab/perspective-viewer"
"jupyter-config/hugr_perspective.json" = "etc/jupyter/jupyter_server_config.d/hugr_perspective.json"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "hugr_perspective/labextension/static/style.js",
    "hugr_perspective/labextension/package.json",
]
skip-if-exists = ["hugr_perspective/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]
